tests/paczka1/fuzzy1/74763907.err
Error in line 1: A475 S896 75,0
Error in line 2: A475 A909 92,8
Error in line 15: 07zZ AN58 1,6
Error in line 11: pD9a A475 93,4
Error in line 4: FUry0tg9 A909 96,8
Error in line 17: pD9a A909 44,5
Error in line 22: pD9a A475 35,3
Error in line 26: pD9a S896 194,7
Error in line 35: l475 l458 140,1
Error in line 30: FUry0tg9 A909 7,2
